update logic send otp reset pass
